src/sql/drivers/psql/qsql_psql.cpp
@@ -1390,8 +1390,10 @@ bool QPSQLDriver::subscribeToNotification(const QString &name)
         PGresult *result = d->exec(query);
         if (PQresultStatus(result) != PGRES_COMMAND_OK) {
             setLastError(qMakeError(tr("Unable to subscribe"), QSqlError::StatementError, d, result));
+            PQclear(result);
             return false;
         }
+        PQclear(result);
 
         if (!d->sn) {
             d->sn = new QSocketNotifier(socket, QSocketNotifier::Read);
@@ -1423,8 +1425,10 @@ bool QPSQLDriver::unsubscribeFromNotification(const QString &name)
     PGresult *result = d->exec(query);
     if (PQresultStatus(result) != PGRES_COMMAND_OK) {
         setLastError(qMakeError(tr("Unable to unsubscribe"), QSqlError::StatementError, d, result));
+        PQclear(result);
         return false;
     }
+    PQclear(result);
 
     d->seid.removeAll(name);
 
